----------
v7.0.0-git
----------

[mms] Asynchronously load the mailbox list on the advanced search page.
[mms] Automatically try to rotate embedded inline images when displaying a
      message.
[mms] Add ability to add email groups to the address book.
[mms] Improved contacts loading - all contacts are never shown by default, but
      provide simple method for user to load all contacts.
[mms] Add dynamically updating relative time display for messages in dynamic
      view.
[mms] Add Purge Deleted button in smartmobile view (Request #13155).
[mms] Improved display of attachments and message log information in dynamic
      view.
[mms] IMP no longer uses MDN status stored in the maillog backend by default.
[mms] Add ability to download individual files from within a .tgz attachment.
[mms] Improved display of contents of ZIP attachments.
[mms] Contacts popup now does address search dynamically, without the need to
      reload the page.
[mms] Remove 'mailboxarray' hook.
[mms] Remove 'display_folder' hook.
[mms] Auto-detect EAI support on mail backends and provide validation feedback
      without the need to submit to the backend.
[mms] Removed basic view.
[mms] Do autocomplete search on browser, if sufficient data exists, to save
      calls to contacts backend.
[mms] Removed minimal view.
[mms] Allow auto-completed e-mail groups to be expanded on the dynamic compose
      page.
[mms] Add class of message part rendering display errors that aren't shown to
      the user by default.
[mms] Throttle message list keypresses in dynamic view to prevent avalanche of
      preview requests sent to server (Request #13574).
[mms] Filter out relative image URLs in HTML message data.
[mms] Implement lazy loading for images in HTML messages.
[mms] Add 'dynamic_prefs' hook to allow for changing of default values for
      browser-based preferences in dynamic view.
[mms] Removed compose 'use_vfs' configuration option.
[mjr] Add IMP_Api::addFlags().